--- a/code/chap01ex_mjd.ipynb
+++ b/code/chap01ex_mjd.ipynb
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -744,19 +744,9 @@
       "48       7\n",
       "50       2\n",
       "Name: prglngth, dtype: int64\n",
-      "0-13: 3522\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-fbf5ec99dff3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprglngth\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"0-13: {preg.prglngth[preg.prglngth <= 13].value_counts().sum()}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"14-26: {preg.prglngth[preg.prglngth <= 26 and preg.prglength >=14].value_counts().sum()}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1476\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1477\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1478\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m   1479\u001b[0m             \u001b[1;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1480\u001b[0m             \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+      "0-13: 3522\n",
+      "14-26: 793\n",
+      "27+: 9278\n"
      ]
     }
    ],
@@ -764,7 +754,8 @@
     "# Solution goes here\n",
     "print(preg.prglngth.value_counts().sort_index())\n",
     "print(f\"0-13: {preg.prglngth[preg.prglngth <= 13].value_counts().sum()}\")\n",
-    "print(f\"14-26: {preg.prglngth[preg.prglngth <= 26 and preg.prglength >=14].value_counts().sum()}\")"
+    "print(f\"14-26: {preg.prglngth[preg.prglngth <= 26][preg.prglngth >=14].value_counts().sum()}\")\n",
+    "print(f\"27+: {preg.prglngth[preg.prglngth >= 27].value_counts().sum()}\")"
    ]
   },
   {
@@ -803,11 +794,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.2956336343963293\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg['totalwgt_kg'] = preg.totalwgt_lb.divide(2.20462262)\n",
+    "print(preg.totalwgt_kg.mean())"
    ]
   },
   {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,11 +1058,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       27\n",
+      "1       42\n",
+      "2       43\n",
+      "3       15\n",
+      "4       20\n",
+      "        ..\n",
+      "7638    34\n",
+      "7639    17\n",
+      "7640    29\n",
+      "7641    16\n",
+      "7642    28\n",
+      "Name: age_r, Length: 7643, dtype: int64\n",
+      "Min: 15\n",
+      "Max: 44\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "ages = resp.age_r\n",
+    "print(ages)\n",
+    "print(f\"Min: {ages.min()}\")\n",
+    "print(f\"Max: {ages.max()}\")"
    ]
   },
   {
@@ -1380,11 +1404,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1069    44\n",
+       "Name: age_r, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "resp[resp.caseid == 1]['age_r']"
    ]
   },
   {
@@ -1396,11 +1432,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['caseid', 'pregordr', 'howpreg_n', 'howpreg_p', 'moscurrp', 'nowprgdk',\n",
+       "       'pregend1', 'pregend2', 'nbrnaliv', 'multbrth',\n",
+       "       ...\n",
+       "       'religion_i', 'metro_i', 'basewgt', 'adj_mod_basewgt', 'finalwgt',\n",
+       "       'secu_p', 'sest', 'cmintvw', 'totalwgt_lb', 'totalwgt_kg'],\n",
+       "      dtype='object', length=245)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg.columns"
    ]
   },
   {
@@ -1412,11 +1464,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5515    6.0\n",
+       "Name: totalwgt_lb, dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg.loc[(preg.caseid == 5012) & (preg.pregordr == 1), 'totalwgt_lb']"
    ]
   },
   {
